--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -32,6 +32,54 @@ section {
   max-width: 65em;
   margin: 0 auto;
 }
+.spacing>*+* {
+  margin-top: var(--spacer, 2rem)
+}
 .btn {
+    display: inline;
+    margin: 0 auto;
+    color: var(--clr-text, #fff);
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1.125rem;
+    padding: .5rem 1.25em;
+    background: var(--clr-accent, blue);
+    border-radius: .25em;
+    transition: 
+        transform 250ms ease-in-out,
+        opacity 250ms linear;
+}
+.btn:hover,
+.btn:focus {
+    transform: scale(1.1);
+    opacity: .9;
+    background-color: rgb(45, 45, 86);
+}
+.primary-title {
+    font-size: 4rem;
+    font-size: clamp(3rem, calc(5vw + 1rem), 4.5rem);
+    line-height: 1.1;
+    text-transform: uppercase;
+}
+
+.section-title {
     
 }
+.hero {
+     color: white; 
+    text-align: center;
+    padding: 15em 0;
+     background-color: #222; 
+      
+     }
+     @supports (background-blend-mode: multiply) {
+      .hero {
+        background: url(img/shoe-3.png), radial-gradient(#444, #111);
+        background-blend-mode: multiply;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: center center;
+      }
+    }
+    
+    
