--- a/landingPage/main.css
+++ b/landingPage/main.css
@@ -1,13 +1,12 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
   line-height: 1.6;
 }
 
@@ -27,28 +26,21 @@ section {
   padding: 7em 0;
 }
 
-.split {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 1em;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.split > * {
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
-  min-width: 15em;
-}
-
 .container {
   width: 85%;
   max-width: 65em;
   margin: 0 auto;
+}
+
+.split {
+  display: flex;
+  gap: 1em;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.split > * {
+  flex-basis: 30%;
+  min-width: 15em;
 }
 
 .spacing > * + * {
@@ -57,51 +49,46 @@ section {
 
 .btn {
   display: inline;
+  text-decoration: none;
   margin: 0 auto;
   color: var(--clr-text, #fff);
   font-weight: 700;
   text-transform: uppercase;
   font-size: 1.125rem;
-  padding: .5rem 1.25em;
+  padding: 0.4rem 1.25em;
   background: var(--clr-accent, blue);
-  border-radius: .25em;
-  -webkit-transition: opacity 250ms linear, -webkit-transform 250ms ease-in-out;
-  transition: opacity 250ms linear, -webkit-transform 250ms ease-in-out;
-  transition: transform 250ms ease-in-out, opacity 250ms linear;
-  transition: transform 250ms ease-in-out, opacity 250ms linear, -webkit-transform 250ms ease-in-out;
+  border-radius: 0.25em;
+  transition: transform 250ms ease-in-out, opacity 250ms linear;
 }
 
 .btn:hover,
 .btn:focus {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  opacity: .9;
-  background-color: #2d2d56;
+  transform: scale(1.1);
+  opacity: 0.9;
+  background-color: rgb(45, 45, 86);
 }
 
 .primary-title {
   font-size: 4rem;
-  font-size: clamp(3rem, calc(5vw + 1rem), 4.5rem);
-  line-height: 1.1;
+  font-size: clamp(3rem, 5vw + 1rem, 4.5rem);
+  line-height: 1;
   text-transform: uppercase;
-}
-
-section {
-  padding: 0;
 }
 
 .section-title {
   text-align: center;
-  font-size: clamp(2.5rem, calc(5w + 1rem), 4rem);
+  font-size: clamp(2.5rem, 5w + 1rem, 4rem);
+  line-height: 1;
+  color: #17353d;
+  margin-bottom: 5rem;
 }
 
 .hero {
   color: white;
   text-align: center;
   padding: 15em 0;
-  background-color: #222;
+  background: #222;
 }
-
 @supports (background-blend-mode: multiply) {
   .hero {
     background: url(img/shoe-3.png), radial-gradient(#444, #111);
@@ -115,50 +102,42 @@ section {
 .featured {
   background: #eee;
 }
-
 .featured__item {
   display: block;
   position: relative;
-  -webkit-transform: scale(0.85);
-          transform: scale(0.85);
-  -webkit-transition: -webkit-transform 250ms ease-in-out;
-  transition: -webkit-transform 250ms ease-in-out;
+  transform: scale(0.85);
   transition: transform 250ms ease-in-out;
-  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
   text-decoration: none;
   color: #333;
   text-align: center;
   line-height: 1.2;
 }
-
 .featured__item:hover, .featured__item:focus {
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  transform: scale(1);
 }
-
-.featured__item:hover .featured_details, .featured__item:focus .featured_details {
-  opacity: 0.6;
+.featured__item:hover .featured__details, .featured__item:focus .featured__details {
+  opacity: 1;
+  text-shadow: 0 0 2em white;
 }
-
 .featured__item::after {
-  content: '';
+  content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  padding: 100% 100% 0 0;
+  top: 10%;
+  left: 10%;
+  padding: 75% 75% 0 0;
   border-radius: 50%;
   background: #2193b0;
   z-index: -1;
 }
-
 .featured__details {
   opacity: 0;
+  transition: opacity 250ms linear;
 }
-
 .featured__details span {
   display: block;
   font-weight: 700;
   font-size: 2.5rem;
+  z-index: -1;
 }
 
 .product {
@@ -166,13 +145,43 @@ section {
   padding: 3em;
   border-radius: 1em;
   margin-bottom: 3em;
+  text-align: center;
 }
-
 .product__title {
-  font-size: 4rem;
+  font-size: clamp(3rem, 5vw + 1rem, 5.5rem);
+  text-transform: uppercase;
   line-height: 1.1;
   color: #fff;
   text-shadow: 0 0 0.2em rgba(0, 0, 0, 0.2);
+}
+.product__image {
+  margin: -5em 0 0 0;
+}
+@media (min-width: 45em) {
+  .product {
+    text-align: left;
+    margin-bottom: 9em;
+  }
+  .product__title {
+    margin: 0;
+  }
+  .product__image {
+    float: right;
+    width: 65%;
+    shape-outside: url(img/shoe-1.png);
+    shape-margin: 1em;
+    margin: 0 -5em 0 0;
+  }
+  .product.shoe-left .product__image {
+    float: left;
+    shape-outside: url(../img/shoe-2.png);
+    margin: 0 0 0 -5em;
+    shape-margin: 2em;
+  }
+}
+
+.hero {
+  --clr-accent:#faa700;
 }
 
 .shoe-red {
@@ -180,4 +189,15 @@ section {
   --clr-outer: rgb(243, 183, 72);
   --clr-accent: limegreen;
 }
-/*# sourceMappingURL=main.css.map */
+
+.shoe-white {
+  --clr-inner: #fce4b3;
+  --clr-outer: #eac886;
+  --clr-accent: #2f4858;
+}
+
+.shoe-blue {
+  --clr-inner: #6dd5ed;
+  --clr-outer: #2193b0;
+  --clr-accent: #008951;
+}/*# sourceMappingURL=main.css.map */
